# eq-plugin

./: Cargo.toml  README.md
src/: atomic_f64.rs  editor.rs  editor_elements.rs  eq.rs  eq_effect_parameters.rs  lib.rs  parameter.rs  svf.rs  units.rs
