[package]
name = "eq-plugin"
version = "0.1.0"
authors = ["DGriffin <github@dgdigital.net>"]
edition = "2018"
license = "GPLv3"

[lib]
name = "eq_plugin"
crate-type = ["cdylib"]

[dependencies]
baseview = {git = "https://github.com/RustAudio/baseview", rev = "d399c1275522ae75f5a82caadd904df2685c8660" }
dirs = "3"
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }
simplelog = "0.8"
raw-window-handle = "0.3"
vst = "0.2"
rtrb = "0.1.1"
imgui-baseview = {git = "https://github.com/BillyDM/imgui-baseview", rev = "3ea419f53727a39d36a0c2e0767f6873a23bf0e9" }
imgui = "0.7"
imgui-knobs = {git = "https://github.com/DGriffin91/imgui-rs-knobs", branch = "main"}
ringbuf = "0.2"
assert_no_alloc = { git = "https://github.com/DGriffin91/rust-assert-no-alloc", branch = "master"} #, features = ["warn_debug"]
audio-filters = {git = "https://github.com/RustyDAW/audio-filters", branch = "main"}